# tree-sitter-jinja

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-jinja.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jinja/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJinjaTests/: TreeSitterJinjaTests.swift
queries/: highlights.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  expressions.txt  raw_blocks.txt  real_world.txt  statements.txt  text_nodes.txt  whitespace_control.txt
